--- a/metadata.yaml
+++ b/metadata.yaml
@@ -44,5 +44,6 @@ subjects:
 - !lcsh 'Venus (Roman deity) -- Poetry'
 - !lcsh 'Adonis (Greek deity) -- Poetry'
 - !lcc 'PR'
+- GITenberg
 title: Venus et Adonis
 url: http://www.gutenberg.org/ebooks/25694
